<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="10dp" />

        <TextView
            android:id="@+id/titleFirstApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/build_your_first_app"
            android:textColor="#5A5555"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/firstAppNeedHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:text="@string/need_help"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/titleFirstApp" />

        <TextView
            android:id="@+id/firstAppCallToFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/call_your_developer_friend"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/firstAppNeedHelp" />

        <EditText
            android:id="@+id/firstAppPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Enter the phone number"
            android:hint="@string/mask_phone"
            android:inputType="phone"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/firstAppCallToFriend" />

        <Button
            android:id="@+id/firstAppCallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#957272"
            android:text="@string/call"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/firstAppPhoneNumber" />

        <TextView
            android:id="@+id/firstAppFirstParagraph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/firstAppFirstParagraphText"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/firstAppCallButton" />

        <LinearLayout
            android:id="@+id/twoFundamentalConcept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/firstAppFirstParagraph">

            <TextView
                android:id="@+id/multipleEntryPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_provide_multiple_entry_points"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/adaptToDifferentDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_adapt_to_diffents_devices"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/firstAppLastParagraph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/firstAppLastParagraphText"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/twoFundamentalConcept" />

        <TextView
            android:id="@+id/creatProjectLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="end"
            android:text="@string/firstAppNextActivityText"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/firstAppLastParagraph" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>