<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/listTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/build_first_app"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listTitle" />

        <TextView
            android:id="@+id/build_first_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/build_your_first_app"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/build_first_app"
            app:layout_constraintStart_toStartOf="@id/build_first_app"
            app:layout_constraintTop_toTopOf="@id/build_first_app" />

        <ImageView
            android:id="@+id/build_first_app_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/build_first_app_image"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/build_first_app"
            app:layout_constraintEnd_toEndOf="@id/build_first_app"
            app:layout_constraintTop_toTopOf="@+id/build_first_app"
            app:srcCompat="@drawable/android_logo_2019" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
